plugins/editorconfig/testData/org/editorconfig/language/parser/valid/qualifiedKey.editorconfig
[foo]
foo.bar.bas = value
