plugins/editorconfig/testData/org/editorconfig/language/parser/invalid/keyWithoutValue.editorconfig
[foo]
key=
another_key=value
and_another_key=value
